  copy_file_range function will have to be run on kernels which implement
  the copy_file_range system call.  Support for most architectures was added
  in version 4.5 of the mainline Linux kernel.

The following bugs are resolved with this release:

  [16573] malloc: Set and reset all hooks for tracing
  [18035] Fix pldd hang
  [20568] Fix crash in _IO_wfile_sync
  [24155] x32 memcmp can treat positive length as 0 (if sign bit in RDX is set) (CVE-2019-7309)
  [24164] Systemtap probes need to use "nr" constraint on 32-bit Arm
  [24161] __run_fork_handlers self-deadlocks in malloc/tst-mallocfork2
  [24211] Use-after-free in Systemtap probe in pthread_join
  [24228] old x86 applications that use legacy libio crash on exit
  [24476] dlfcn: Guard __dlerror_main_freeres with __libc_once_get (once)
  [24744] io: Remove the copy_file_range emulation
  [24986] alpha: new getegid, geteuid and getppid syscalls used
    unconditionally
  [25203] libio: Disable vtable validation for pre-2.1 interposed handles
  [25204] Ignore LD_PREFER_MAP_32BIT_EXEC for SUID programs
  [25225] ld.so fails to link on x86 if GCC defaults to -fcf-protection
  [25232] No const correctness for strchr et al. for Clang++
  [25933] Off by one error in __strncmp_avx2
  [25976] nss_compat: internal_end*ent may clobber errno, hiding ERANGE
  [27130] "rep movsb" performance issue
  [27177] GLIBC_TUNABLES=glibc.cpu.x86_ibt=on:glibc.cpu.x86_shstk=on doesn't work

Security related changes:

  CVE-2019-7309: x86-64 memcmp used signed Jcc instructions to check
  size.  For x86-64, memcmp on an object size larger than SSIZE_MAX
  has undefined behavior.  On x32, the size_t argument may be passed
  in the lower 32 bits of the 64-bit RDX register with non-zero upper
  32 bits.  When it happened with the sign bit of RDX register set,
  memcmp gave the wrong result since it treated the size argument as
  zero.  Reported by H.J. Lu.

  CVE-2019-9169: Attempted case-insensitive regular-expression match